--- a/src/blocks/branch/branch.pug
+++ b/src/blocks/branch/branch.pug
@@ -25,17 +25,21 @@ mixin branch(text, mods)
         .branch__top(style="background-image: url(img/branch1.jpg);") 
           a(href="javascript:void(0);").branch__link
             .branch__item-body
-              h3.branch__item-title.h3 Цифровизация производства
+              h3.branch__item-title Цифровизация производства
               ul.branch__item-bottom 
-                li.branch__item-subtitle.h5 Цифровые двойники
-                li.branch__item-subtitle.h5 Достоверность данных
-                li.branch__item-subtitle.h5 Проактивные приложения
-                li.branch__item-subtitle.h5 Распределённая командная работа и цифровой рабочий
+                li.branch__item-item
+                  span.branch__item-subtitle.h5 Цифровые двойники
+                li.branch__item-item
+                  span.branch__item-subtitle.h5 Достоверность данных
+                li.branch__item-item
+                  span.branch__item-subtitle.h5 Проактивные приложения
+                li.branch__item-item
+                  span.branch__item-subtitle.h5 Распределённая командная работа и цифровой рабочий
         ul.branch__grid 
           .branch__item(style="background-image: url(img/branch2.jpg);")  
             a(href="javascript:void(0);").branch__link
               .branch__body 
-                h3.branch__title-h3.h3 Нефть и газ
+                h3.branch__title-h3 Нефть и газ
                 ul.branch__bottom 
                   li.branch__subtitle.h5 Цифровые двойники
                   li.branch__subtitle.h5 Цифровое бурение
@@ -45,7 +49,7 @@ mixin branch(text, mods)
           .branch__item(style="background-image: url(img/branch3.jpg);")  
             a(href="javascript:void(0);").branch__link
               .branch__body 
-                h3.branch__title-h3.h3 Энергетика
+                h3.branch__title-h3 Энергетика
                 ul.branch__bottom 
                   li.branch__subtitle.h5 Генерация
                   li.branch__subtitle.h5 Ресурсоснабжающие организации и сбыт
@@ -53,7 +57,7 @@ mixin branch(text, mods)
           .branch__item(style="background-image: url(img/branch4.png);")  
             a(href="javascript:void(0);").branch__link
               .branch__body 
-                h3.branch__title-h3.h3 Промышленное производство
+                h3.branch__title-h3 Промышленное производство
                 ul.branch__bottom 
                   li.branch__subtitle.h5 Цифровые двойники
                   li.branch__subtitle.h5 Достоверность данных
