--- a/src/blocks/solutions/solutions.pug
+++ b/src/blocks/solutions/solutions.pug
@@ -28,29 +28,4 @@ mixin solutions(text, mods)
             p.solutions__top-text.text Мы&nbsp;предлагаем набор планов и&nbsp;возможностей, инноваций и&nbsp;связанных с&nbsp;ними технологических решений, которые помогают компаниям и&nbsp;промышленным предприятиям перейти на&nbsp;новые уровни автоматизации и&nbsp;цифровизации.
             p.solutions__top-text.text Наши Заказчики&nbsp;&mdash; основные предприятия реального сектора экономики: энергетики, нефтегазодобычи, промышленного производства. Наши продукты помогают им&nbsp;контролировать критическую инфраструктуру, обеспечивают аналитику для принятия управленческих решений, оптимизируют сложные технологические процессы.
         h2.solutions__title.h2 Решения
-        ul.solutions__grid
-          li.solutions__item
-            a(href="javascript:void(0);").solutions__body 
-              h3.solutions__subtitle.subtitle Мониторинг технологических процессов и производств
-          li.solutions__item
-            a(href="javascript:void(0);").solutions__body 
-              h3.solutions__subtitle.subtitle Энергоучёт и энергоэффективность
-          li.solutions__item
-            a(href="javascript:void(0);").solutions__body 
-              h3.solutions__subtitle.subtitle Мониторинг технологических процессов и производств
-          li.solutions__item
-            a(href="javascript:void(0);").solutions__body 
-              h3.solutions__subtitle.subtitle Мониторинг технологических процессов и производств
-          li.solutions__item
-            a(href="javascript:void(0);").solutions__body 
-              h3.solutions__subtitle.subtitle Мониторинг технологических процессов и производств
-          li.solutions__item
-            a(href="javascript:void(0);").solutions__body 
-              h3.solutions__subtitle.subtitle Мониторинг технологических процессов и производств
-          li.solutions__item
-            a(href="javascript:void(0);").solutions__body 
-              h3.solutions__subtitle.subtitle Мониторинг технологических процессов и производств
-          li.solutions__item
-            a(href="javascript:void(0);").solutions__body 
-              h3.solutions__subtitle.subtitle Мониторинг технологических процессов и производств
-        
+        +solutions-grid()
