--- a/src/pages/all-pages.pug
+++ b/src/pages/all-pages.pug
@@ -10,12 +10,18 @@ block meta
 
 block content  
 
-  section.section(class=allMods)&attributes(attributes)
+  section.section.plain-content(class=allMods)&attributes(attributes)
     .container
       h2.title-h2.plus__title.h2 Все страницы 
       .all-pages__inner
         p #[a.h5(href="index.html", target="_blank").link Главная]
-
+        p #[a.h5(href="about.html", target="_blank").link Кто мы]
+        p #[a.h5(href="solutions.html", target="_blank").link Решения]
+        p #[a.h5(href="monitoring.html", target="_blank").link Мониторинг технологических процессов и производств]
+        p #[a.h5(href="planning.html", target="_blank").link Планирование и оптимизация производственных процессов]
+        p #[a.h5(href="industries.html", target="_blank").link Отрасли]
+        p #[a.h5(href="contacts.html", target="_blank").link Контакты]
+        p #[a.h5(href="404.html", target="_blank").link 404]
 
 //- block footer
 //-   p footer
