--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -9,10 +9,13 @@ block meta
 
 block content
   +top-slider() 
-  //- +solutions()
-  //- +plus()  
-  //- +branch()
-  //- +partners-slider()
+  +solutions()
+  +plus()  
+  +branch()
+  section.partners-slider(class=allMods)&attributes(attributes)
+  .partners-slider__inner.container
+    h2.partners-slider__title.h2 Нам доверяют
+  +partners()
 
 
 //- block footer
