--- a/src/blocks/branch/branch.scss
+++ b/src/blocks/branch/branch.scss
@@ -5,11 +5,33 @@
 .branch {
 
   $block-name: &; // #{$block-name}__element
-  padding: 148px 0;
+  padding: 46px 0;
+  margin-bottom: 48px;
+
+  @media (min-width: $screen-xxl) {
+    padding: 148px 0;
+  }
+
+  @media (min-width: $screen-xl) {
+    padding: 108px 0;
+  }
+
+  @media (min-width: $screen-lg) {
+    padding: 100px 0;
+  }
+
+  @media (min-width: $screen-sm) {
+    padding: 60px 0;
+  }
 
   &__title {
     color: $white;
-    margin: 0 0 48px;
+    margin: 0 0 30px;
+
+    @media (min-width: $screen-lg) {
+      margin: 0 0 48px;
+    }
+
   }
 
   &__top {
@@ -23,8 +45,12 @@
     position: relative;
     z-index: 1;
 
-    @media (min-width: $screen-xl) {
+    @media (min-width: $screen-xxl) {
       margin-bottom: 40px;
+    }
+
+    @media (min-width: $screen-xl) {
+      margin-bottom: 32px;
     }
 
 
@@ -78,29 +104,44 @@
   }
 
   &__item-body {
-    padding: 48px;
+    padding: 24px 16px;
     display: flex;
     flex-direction: column;
-    align-items: center;
+
+
+    @media (min-width: $screen-xxl) {
+      padding: 48px;
+    }
+
+    @media (min-width: $screen-lg) {
+      padding: 32px;
+      align-items: center;
+    }
   }
 
   &__item-title {
-    margin: 0 0 32px;
-    text-align: center;
+    font: 18px $ff-i-b;
+    font-weight: 700;
+    margin: 0;
 
-    @media (min-width: $screen-xl) {
-      margin: 0 0 38px;
+    @media (min-width: $screen-xxl) {
+      font-size: 36px;
+      margin: 0 0 40px;
+    }
+
+    @media (min-width: $screen-lg) {
+      font-size: 30px;
+      text-align: center;
+      margin: 0 0 32px;
     }
   }
 
-  &__item-subtitle {
+  &__item-item {
     padding: 0;
     position: relative;
-
-
-    @media (min-width: $screen-lg) {
-      margin-right: 64px;
-    }
+    display: flex;
+    justify-content: center;
+    width: 100%;
 
 
     &:first-child::after,
@@ -123,6 +164,11 @@
 
     &:not(:last-child) {
       margin-bottom: 42px;
+      width: 23%;
+
+      @media (min-width: $screen-xl) {
+        width: 28%;
+      }
 
       @media (min-width: $screen-lg) {
         margin-bottom: 16px;
@@ -130,20 +176,23 @@
     }
   }
 
+  &__item-subtitle {
+    text-align: center;
+  }
+
   &__item-bottom {
     margin: 0;
     padding: 0;
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
-    max-width: 1000px;
+
     list-style: none;
+    display: none;
 
     @media (min-width: $screen-lg) {
-      flex-direction: row;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
     }
+
   }
 
   &__grid {
@@ -153,9 +202,13 @@
     grid-template-columns: repeat(1, 1fr);
     gap: 16px;
 
+    @media (min-width: $screen-xxl) {
+      gap: 40px;
+    }
+
     @media (min-width: $screen-xl) {
       grid-template-columns: repeat(3, 1fr);
-      gap: 40px;
+      gap: 16px;
     }
   }
 
@@ -171,7 +224,7 @@
     box-shadow: 0px 8px 32px rgba(0, 0, 0, 0.24);
     z-index: 1;
 
-    @media (min-width: $screen-xl) {
+    @media (min-width: $screen-xxl) {
       aspect-ratio: 1/1;
     }
 
@@ -281,13 +334,17 @@
   &__body {
     display: flex;
     flex-direction: column;
-    padding: 32px;
+    padding: 24px 16px;
     width: 100%;
     height: 100%;
     position: relative;
 
-    @media (min-width: $screen-xl) {
+    @media (min-width: $screen-xxl) {
       padding: 48px;
+    }
+
+    @media (min-width: $screen-lg) {
+      padding: 32px;
     }
 
     &:before {
@@ -307,17 +364,36 @@
   }
 
   &__title-h3 {
+    font: 18px $ff-i-b;
+    font-weight: 700;
+    margin: 0;
 
-    margin: 0 0 32px;
+    @media (min-width: $screen-xxl) {
+      font-size: 36px;
+      min-height: 86px;
+    }
 
     @media (min-width: $screen-xl) {
-      min-height: 86px;
+      min-height: 64px;
       margin: 0 0 40px;
+    }
+
+    @media (min-width: $screen-lg) {
+      font-size: 28px;
+      margin: 0 0 32px;
     }
   }
 
   &__bottom {
     list-style: disc;
+    display: none;
+
+    @media (min-width: $screen-xxl) {
+      padding-left: 20px;
+    }
+    @media (min-width: $screen-lg) {
+      display: block;
+    }
   }
 
   &__subtitle {
