--- a/src/blocks/page-footer/page-footer.scss
+++ b/src/blocks/page-footer/page-footer.scss
@@ -7,7 +7,16 @@
   $block-name: &; // #{$block-name}__element
 
   background-color: $main-dark;
-  padding: 120px 0 56px;
+  padding: 58px 0 56px;
+
+  @media (min-width: $screen-xxl) {
+    padding: 120px 0 56px;
+  }
+
+  @media (min-width: $screen-lg) {
+    padding: 80px 0 48px;
+  }
+
 
   &__body {
 
@@ -18,30 +27,64 @@
 
   &__about {
     flex: 0 0 30%;
-    margin-right: 20px;
     margin-bottom: 32px;
+
+    @media (min-width: $screen-xxl) {
+      margin-right: 42px;
+    }
+    @media (min-width: $screen-xl) {
+      margin-right: 52px;
+    }
 
     @media (min-width: $screen-lg) {
       margin-bottom: 0;
+      margin-right: 66px;
     }
   }
 
   &__menu {
     display: none;
 
+    @media (min-width: $screen-xxl) {
+      flex: 0 0 18%;
+    }
     @media (min-width: $screen-xl) {
       display: block;
-      flex: 0 0 20%;
+      flex: 0 0 17%;
     }
   }
 
   &__logo {
-    width: 267px;
-    margin-bottom: 56px;
+    width: 200px;
+    margin-bottom: 40px;
+
+    @media (min-width: $screen-xxl) {
+
+      margin-bottom: 54px;
+    }
+    @media (min-width: $screen-xl) {
+
+      margin-bottom: 46px;
+    }
+
+    @media (min-width: $screen-lg) {
+      width: 267px;
+      margin-bottom: 56px;
+    }
   }
 
   &__info {
     color: $white;
+    margin: 0;
+    margin-bottom: 6px;
+
+    @media (min-width: $screen-xxl) {
+      margin-bottom: 24px;
+    }
+
+    @media (min-width: $screen-xl) {
+      margin-bottom: 16px;
+    }
 
     @media (min-width: $screen-lg) {
       padding-left: 80px;
@@ -64,15 +107,21 @@
     color: $white;
     text-decoration: none;
     font: 13px/1.3 $ff-i-b;
-    margin-bottom: 24px;
+    margin-bottom: 10px;
     letter-spacing: 0.05em;
 
     @media (min-width: $screen-xxl) {
       font-size: 22px;
+      margin-bottom: 24px;
+    }
+
+    @media (min-width: $screen-xl) {
+      margin-bottom: 16px;
     }
 
     @media (min-width: $screen-lg) {
       font-size: 16px;
+      margin-bottom: 24px;
     }
   }
 
@@ -82,14 +131,21 @@
     text-decoration: none;
     font: 13px/1.3 $ff-i-sb;
     font-weight: 500;
-    margin-bottom: 24px;
+    margin-bottom: 10px;
     letter-spacing: 0.05em;
+
     @media (min-width: $screen-xxl) {
       font-size: 22px;
+      margin-bottom: 24px;
+    }
+
+    @media (min-width: $screen-xl) {
+      margin-bottom: 16px;
     }
 
     @media (min-width: $screen-lg) {
       font-size: 16px;
+      margin-bottom: 24px;
     }
   }
 
@@ -98,6 +154,7 @@
     font: 12px/1.5 $ff-i-b;
     margin-bottom: 0;
     letter-spacing: 0.05em;
+
     @media (min-width: $screen-xxl) {
       font-size: 14px;
     }
@@ -108,6 +165,7 @@
     font: 12px/1.5 $ff-i-r;
     margin-bottom: 0;
     letter-spacing: 0.05em;
+
     @media (min-width: $screen-xxl) {
       font-size: 14px;
     }
@@ -116,18 +174,23 @@
 
   &__list {
     list-style: none;
+    padding: 0;
   }
 
   &__item {
     color: $white;
     font: 18px/1.3 $ff-i-m;
     font-weight: 500;
-    margin-bottom: 0;
     letter-spacing: 0.05em;
     margin-bottom: 32px;
 
     @media (min-width: $screen-xxl) {
       font-size: 22px;
+      margin-bottom: 32px;
+    }
+
+    @media (min-width: $screen-xl) {
+      margin-bottom: 24px;
     }
   }
 
@@ -168,15 +231,19 @@
     background: #336D69;
     border: none;
     border-radius: 4px;
-    padding: 9px 16px;
+    padding: 8px 16px;
     margin-bottom: 8px;
     border: 1px solid #336D69;
     transition: all $transition-time;
 
     &::placeholder {
       color: $placeholder-color;
-      font: 14px/1.3 $ff-i-r;
+      font: 12px/1.3 $ff-i-r;
       letter-spacing: 0.05em;
+
+      @media (min-width: $screen-lg) {
+        font-size: 14px;
+      }
     }
 
     &:focus {
@@ -212,7 +279,11 @@
   &__title {
     color: $white;
     margin: 0;
-    margin-bottom: 24px;
+    margin-bottom: 18px;
+
+    @media (min-width: $screen-lg) {
+      margin-bottom: 24px;
+    }
   }
 
   &__submit {
@@ -224,8 +295,23 @@
   }
 
   &__agree {
-    padding: 24px 0;
     padding-left: 40px;
+    margin-bottom: 16px;
+
+    @media (min-width: $screen-xxl) {
+      padding-top: 24px;
+      padding-bottom: 24px;
+    }
+    @media (min-width: $screen-xl) {
+      padding-top: 4px;
+      padding-bottom: 4px;
+    }
+
+    @media (min-width: $screen-lg) {
+      margin-bottom: 0;
+      padding: 24px 0;
+      padding-left: 40px;
+    }
   }
 
   .custom-checkbox {
@@ -294,17 +380,3 @@
   }
 }
 
-
-.footer--angled {
-  z-index: 10;
-  --section-padding: 80px;
-  --clip-point: calc(100% - var(--section-padding));
-
-
-  clip-path: polygon(0 0, 100% var(--section-padding), 100% 100%, 0% 100%);
-  background: $main-dark;
-
-  @media (min-width: $screen-xxl) {
-    --section-padding: 80px;
-  }
-}
