--- a/src/blocks/page-header/page-header.scss
+++ b/src/blocks/page-header/page-header.scss
@@ -10,21 +10,24 @@
   color: $white;
 
   &__top {
-    padding: 16px 0 16px;
+    padding: 16px 0 10px;
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
 
     @media (min-width: $screen-xxl) {
-      padding: 40px 0 47px;
+      padding: 40px 0 32px;
     }
 
     @media (min-width: $screen-xl) {
-      padding: 32px 0 32px;
+      padding: 32px 0 24px;
     }
 
     @media (min-width: $screen-lg) {
       padding: 24px 0 12px;
+    }
+    @media (min-width: $screen-sm) {
+      padding: 16px 0 16px;
     }
 
   }
@@ -52,7 +55,9 @@
     display: flex;
     justify-content: flex-end;
 
-    @media (min-width: $screen-xxl) {}
+    @media (min-width: $screen-xxl) {
+      justify-content: flex-start;
+    }
 
     @media (min-width: $screen-xl) {
       width: 40%;
@@ -104,12 +109,12 @@
 
     @media (min-width: $screen-xxl) {
       font-size: 20px;
-      margin-bottom: 32px;
+      margin-bottom: 16px;
     }
 
     @media (min-width: $screen-lg) {
       font-size: 17px;
-      margin-bottom: 24px;
+      margin-bottom: 8px;
       display: block;
     }
   }
@@ -122,7 +127,7 @@
   &__search {
     width: 22px;
     height: 22px;
-
+    padding: 0;
   }
 
   &__search-close {
@@ -426,7 +431,7 @@
       }
     }
 
-    @media (max-width: ($screen-xl - 1)){
+    @media (max-width: ($screen-xl - 1)) {
       padding: 0;
       background-color: transparent;
       max-height: 0;
