--- a/src/blocks/page/page.scss
+++ b/src/blocks/page/page.scss
@@ -8,7 +8,8 @@
 // Сделаем viewport великим снова! (привет, IE10) http://timkadlec.com/2012/10/ie10-snap-mode-and-responsive-design/
 @at-root {
 
-  @-ms-viewport { // stylelint-disable-line
+  @-ms-viewport {
+    // stylelint-disable-line
     width: device-width;
   }
 }
@@ -21,6 +22,7 @@
   font-style: normal;
   font-display: swap;
 }
+
 @font-face {
   font-family: 'Inter-Bold';
   src: url('../fonts/Inter-Bold.woff2') format('woff2'),
@@ -29,6 +31,7 @@
   font-style: normal;
   font-display: swap;
 }
+
 @font-face {
   font-family: 'Inter-Medium';
   src: url('../fonts/Inter-Medium.woff2') format('woff2'),
@@ -37,6 +40,7 @@
   font-style: normal;
   font-display: swap;
 }
+
 @font-face {
   font-family: 'Inter-SemiBold';
   src: url('../fonts/Inter-SemiBold.woff2') format('woff2'),
@@ -94,8 +98,8 @@
 }
 
 body {
-  display: flex;           // Исправляем баг в IE для min-height and flexbox (flex-direction:column)
-  flex-direction: column;  // и прижимаем footer в IE 10-11
+  display: flex; // Исправляем баг в IE для min-height and flexbox (flex-direction:column)
+  flex-direction: column; // и прижимаем footer в IE 10-11
   min-height: 100%;
   margin: 0;
   word-break: break-word;
@@ -108,18 +112,19 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 
-  &.lock{
+  &.lock {
     overflow: hidden;
     position: relative;
 
-    &::before{
+    &::before {
       position: absolute;
       content: '';
       top: 0px;
       left: 0px;
       width: 100%;
       height: 100%;
-      background: linear-gradient(0deg,#00bfff 0,#00e68a 100%);;
+      background: linear-gradient(0deg, #00bfff 0, #00e68a 100%);
+      ;
       opacity: 0.5;
       z-index: 10;
       transition: all $transition-time;
@@ -151,12 +156,12 @@ label,
 select,
 textarea {
   touch-action: manipulation; // Стилевая коррекция 300ms задержки (для поддерживающих браузеров)
-  margin: 0;                  // Убираем margin в Firefox и Safari
+  margin: 0; // Убираем margin в Firefox и Safari
 }
 
 button,
 input {
-  overflow: visible;    // Покажем торчащее в Edge
+  overflow: visible; // Покажем торчащее в Edge
   text-transform: none; // Уберём наследование text transform в Firefox
 }
 
@@ -185,7 +190,7 @@ input[type='month'] {
 }
 
 textarea {
-  overflow: auto;   // Удаление верт. скролла в IE.
+  overflow: auto; // Удаление верт. скролла в IE.
   resize: vertical; // Правильное изменение размеров
 }
 
@@ -223,12 +228,12 @@ a {
 
 hr {
   box-sizing: content-box; // Проблема Firefox
-  height: 0;               // Проблема Firefox
+  height: 0; // Проблема Firefox
   margin-top: $typo-margin-vertical * 2;
   margin-bottom: $typo-margin-vertical * 2;
   border: 0;
   border-top: 1px solid $border-color;
-  overflow: visible;       // Проблема Edge и IE
+  overflow: visible; // Проблема Edge и IE
 }
 
 
@@ -243,6 +248,7 @@ blockquote,
 pre,
 address,
 figure {
+  padding: 0;
   margin-top: 0;
   margin-bottom: $typo-margin-vertical;
 }
@@ -381,6 +387,7 @@ pre {
     --container-horizontal-padding: 15px;
     --container-width: calc(828px - var(--container-horizontal-padding) * 2);
   }
+
   @media (min-width: $screen-md) {
     --container-horizontal-padding: 15px;
     --container-width: calc(600px - var(--container-horizontal-padding) * 2);
@@ -400,13 +407,25 @@ pre {
 
 }
 
-.all-pages__inner{
-  .h5{
+.all-pages__inner {
+  .h5 {
     text-decoration: none;
     color: $main-dark;
     transition: color $transition-time;
-    &:hover{
+
+    &:hover {
       color: $main-light;
     }
+  }
+}
+
+.partners-slider__title {
+  background: linear-gradient(270deg, #00bfff -.23%, #00e68a 99.77%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  margin-bottom: 32px;
+
+  @media (min-width: $screen-lg) {
+    margin-bottom: 56px;
   }
 }
