--- a/src/blocks/solutions/solutions.scss
+++ b/src/blocks/solutions/solutions.scss
@@ -6,66 +6,110 @@
 
   $block-name: &; // #{$block-name}__element
   z-index: 6;
+  margin-top: 32px;
 
-  &__content{
-    transform: translateY(10%);
+  @media (min-width: $screen-xl) {
+    margin-top: 0px;
+  }
+
+  @media (min-width: $screen-lg) {
+    margin-top: 22px;
+  }
+
+  @media (min-width: $screen-md) {
+    margin-top: 24px;
+  }
+
+  @media (min-width: $screen-sm) {
+    margin-top: 30px;
+  }
+
+  &__content {
+    transform: translateY(6px);
+
+
+    @media (min-width: $screen-xxl) {
+      transform: translateY(80px);
+    }
+
+    @media (min-width: $screen-lg) {
+      transform: translateY(60px);
+    }
+
+    @media (min-width: $screen-md) {
+      transform: translateY(24px);
+    }
+
+    @media (min-width: $screen-sm) {
+      transform: translateY(18px);
+    }
+  }
+
+  &__top {
+    @media (min-width: $screen-xxl) {
+      margin-bottom: 72px;
+    }
   }
 
   &__top-title {
-    margin-bottom: 32px;
+    margin-bottom: 16px;
+
+    @media (min-width: $screen-lg) {
+      margin-bottom: 24px;
+    }
+
+    @media (min-width: $screen-md) {
+      margin-bottom: 20px;
+    }
+
+    @media (min-width: $screen-sm) {
+      margin-bottom: 20px;
+    }
+  }
+
+  &__top-descr {
+    margin-bottom: 40px;
   }
 
   &__top-text {
     margin-bottom: 28px;
+
+    @media (min-width: $screen-xxl) {
+      margin-bottom: 28px;
+    }
+
+    @media (min-width: $screen-lg) {
+      margin-bottom: 24px;
+    }
+
+    @media (min-width: $screen-sm) {
+      margin-bottom: 18px;
+    }
   }
 
   &__title {
     color: $white;
     margin: 0;
-  }
 
-  &__grid {
-    margin: 0;
-    list-style: none;
-    padding: 0;
-    display: grid;
-    grid-template-columns: repeat(12, 1fr);
-    gap: 40px;
-    z-index: 7;
-    filter: drop-shadow(0px 8px 32px rgba(0, 0, 0, 0.24));
-    transform: translateY(20px);
-  }
-
-  &__item {
-    background-color: $black;
-    grid-column: 3 span;
-    border-radius: 16px;
-    aspect-ratio: 1/1;
-    background-image: url("../img/a1.jpg");
-    background-repeat: no-repeat;
-    background-color: $black;
-    background-position: center center;
-    background-size: cover;
-
-    transition: all $transition-time;
-
-    &:hover {
-      background-image: url("../img/a2.jpg");
+    @media (min-width: $screen-lg) {
+      margin-bottom: 12px;
     }
   }
 
-  &__body {
-    display: block;
-    cursor: pointer;
-    text-decoration: none;
-    padding: 32px;
-    width: 100%;
-    height: 100%;
-  }
-
-  &__subtitle {
-    margin: 0;
-    color: $white;
-  }
-
 }
+
+
+// .b2 {
+//   position: relative;
+
+//   &:after {
+//     position: absolute;
+//     content: "";
+//     top: 0;
+//     left: 0;
+//     width: 100%;
+//     height: 100%;
+//     background-color: $main-dark;
+//     opacity: 0.5;
+//   }
+// }
