--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -13,6 +13,7 @@ $gray-lightest: hsl(0, 0%, 90%);
 $white: hsl(0, 0%, 100%);
 
 $color-accent: #00BFFF;
+$light-blue: #64D8FF;
 $color-main: #014945;
 $color-success: hsl(120, 39%, 54%);
 $color-danger: #F02020;
@@ -93,7 +94,7 @@ $ff-i-sb: 'Inter-SemiBold', sans-serif;
 
 // Ширины
 
-$screen-xs: 0;
+$screen-xs: 360px;
 $screen-sm: 576px;
 $screen-md: 768px;
 $screen-lg: 992px;
