--- a/src/blocks/about-solutions/about-solutions.pug
+++ b/src/blocks/about-solutions/about-solutions.pug
@@ -26,5 +26,5 @@ mixin about-solutions(text, mods)
     +apply()
     +projects()
     +partners()
-    +more()
+    +more('Запросить дополнительную информацию')
 
