--- a/src/blocks/more/more.pug
+++ b/src/blocks/more/more.pug
@@ -21,4 +21,4 @@ mixin more(text, mods)
   .more(class=allMods)&attributes(attributes)
     .more__inner.container
       .more__wrapper 
-        a(href="").more__btn.btn Запросить дополнительную информацию
+        a(href="javascript:void(0);").more__btn.btn.more__btn=text 
