--- a/src/blocks/text-block/text-block.pug
+++ b/src/blocks/text-block/text-block.pug
@@ -25,5 +25,5 @@ mixin text-block(text, mods)
       p.text-block__text.text-bold Коммерческий учет
       p.text-block__text.text-bold Диспетчеризация и технический учет
       p.text-block__text.text-bold Управление жизненным циклов средств измерения и приборов учета
-      p.text-block__text.text Наши Заказчики&nbsp;&mdash; основные предприятия реального сектора экономики: энергетики, нефтегазодобычи, промышленного производства. Наши продукты помогают им&nbsp;контролировать критическую инфраструктуру, обеспечивают аналитику для принятия управленческих решений, оптимизируют сложные технологические процессы.
+      p.text-block__text.text Наши Заказчики – основные предприятия реального сектора экономики: энергетики, нефтегазодобычи, промышленного производства. Наши продукты помогают им контролировать критическую инфраструктуру, обеспечивают аналитику для принятия управленческих решений, оптимизируют сложные технологические процессы.
       block
