--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -186,6 +186,7 @@
   border: none;
   background: inherit;
   cursor: pointer;
+  padding: 0;
 }
 
 .btn {
@@ -357,3 +358,4 @@
 .pt-16 {
   padding-top: 16px;
 }
+
