--- a/src/blocks/apply/apply.scss
+++ b/src/blocks/apply/apply.scss
@@ -26,6 +26,10 @@
 
   &__item {
     margin-bottom: 16px;
+    @media (max-width: ($screen-xxl - 1)){
+      flex: 0 0 50%;
+      margin-bottom: 20px;
+    }
 
     @media (min-width: $screen-lg) {
       padding: 0 20px;
