--- a/src/blocks/page-header/page-header.pug
+++ b/src/blocks/page-header/page-header.pug
@@ -80,12 +80,17 @@ mixin page-header(mods)
             a(href="tel:+7(495)2802595").page-header__phone +7 (495) 280-25-95
             a(href="javascript:void(0)").page-header__connect-btn.btn Обратный звонок
           .page-header__magnify
-            button.page-header__search.btn-reset 
+            button.page-header__search.search-btn.btn-reset 
               svg.page-header__search-btn(width='23' height='22' viewBox='0 0 23 22' fill='none' xmlns='http://www.w3.org/2000/svg')
                 path(d='M9.11 17.22C13.589 17.22 17.22 13.589 17.22 9.11C17.22 4.63097 13.589 1 9.11 1C4.63097 1 1 4.63097 1 9.11C1 13.589 4.63097 17.22 9.11 17.22Z' stroke='#00E68A' stroke-width='2' stroke-miterlimit='10' stroke-linecap='round' stroke-linejoin='round' fill='none')
                 path(d='M15.52 14.28L21.6 20.36' stroke='#00E68A' stroke-width='2' stroke-miterlimit='10' stroke-linecap='round' stroke-linejoin='round' fill='none')
-              svg.page-header__search-close(width='20' height='19' viewBox='0 0 20 19' fill='none' xmlns='http://www.w3.org/2000/svg')
-                path(d='M17.5664 0.556641L19.2431 2.23334L2.47614 19.0003L0.799449 17.3236L17.5664 0.556641Z' fill='#00E68A')
-                path(d='M2.21094 0.556641L0.534242 2.23334L17.3012 19.0003L18.9779 17.3236L2.21094 0.556641Z' fill='#00E68A')
+            .search-block 
+              .search-block__inner.container
+                .search-block__content
+                  label.search-block__label Введите запрос
+                  input.search-block__input(type="search" name="" placeholder="Поиск по сайту")
+                  svg.search-block__btn(width='20' height='18' viewBox='0 0 20 18' fill='none' xmlns='http://www.w3.org/2000/svg')
+                    path(d='M8.6777 14.405C12.3794 14.405 15.3802 11.4042 15.3802 7.70248C15.3802 4.0008 12.3794 1 8.6777 1C4.97602 1 1.97522 4.0008 1.97522 7.70248C1.97522 11.4042 4.97602 14.405 8.6777 14.405Z' stroke='white' stroke-width='2' stroke-miterlimit='10' stroke-linecap='round' stroke-linejoin='round' fill='none')
+                    path(d='M13.9754 11.9753L19.0002 17.0001' stroke='white' stroke-width='2' stroke-miterlimit='10' stroke-linecap='round' stroke-linejoin='round')
           .page-header__lang 
             a(href="javascript:void(0)").page-header__lang-btn ENG
