--- a/src/blocks/page/page.scss
+++ b/src/blocks/page/page.scss
@@ -429,3 +429,116 @@ pre {
     margin-bottom: 56px;
   }
 }
+
+a:hover {
+  color: $main-light;
+}
+
+//choices
+
+.choices__inner {
+  background-color: $white;
+  border: 1px solid #e3e3e3;
+  border-radius: 4px;
+}
+
+.choices__item {
+  font: 12px/1.3 $ff-i-r;
+  letter-spacing: 0.05em;
+  color: $black;
+
+  @media (min-width: $screen-xxl) {
+    font-size: 14px;
+  }
+
+  @media (min-width: $screen-lg) {
+    font-size: 12px;
+  }
+}
+
+
+.is-focused .choices__inner,
+.is-open .choices__inner {
+  border-color: $color-accent;
+}
+
+.is-open .choices__inner {
+  border-radius: 4px;
+}
+
+.is-flipped.is-open .choices__inner {
+  border-radius: 4px;
+}
+
+.choices[data-type*=select-one]:after {
+  background: url("../img/arrow-down.svg");
+  background-repeat: no-repeat;
+  background-position: right;
+  background-size: contain;
+  border: none;
+  width: 18px;
+  height: 16px;
+  top: 40%;
+}
+
+.choices[data-type*=select-one].is-open:after {
+  background: url("../img/arrow-down-green.svg");
+  background-repeat: no-repeat;
+  background-position: right;
+  background-size: contain;
+  border: none;
+  width: 18px;
+  height: 16px;
+  top: 40%;
+  margin-top: 0;
+}
+
+.choices__placeholder {
+  color: $main-dark;
+  opacity: 1;
+}
+
+.choices__list--dropdown .choices__item {
+  &:not(:last-child) {
+    border-bottom: 1px solid #e3e3e3;
+  }
+}
+
+.choices__list--dropdown .choices__item.is-highlighted {
+  background-color: $main-light;
+}
+
+.choices__list--dropdown {
+  border-bottom-left-radius: 0px;
+  border-bottom-right-radius: 0px;
+}
+
+.is-open .choices__list--dropdown {
+  border: none;
+  filter: drop-shadow(0px 4px 15px rgba(0, 0, 0, 0.1));
+}
+
+.choices__list--dropdown .choices__placeholder {
+  display: none;
+}
+
+.is-flipped .choices__list--dropdown {
+  border-radius: 0;
+}
+
+//choices ends
+
+.mt-80{
+  margin-top: 48px;
+
+  @media (min-width: $screen-lg) {
+margin-top: 80px;
+  }
+}
+.mb-64{
+  margin-top: 48px;
+
+  @media (min-width: $screen-lg) {
+margin-top: 64px;
+  }
+}
